Closed Bug 16814 Opened 25 years ago Closed 25 years ago

[DOGFOOD] All attached image files that surpasses 8k in size can not be viewd after received

Categories

(MailNews Core :: Backend, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: marina, Assigned: warrensomebody)

Details

(Whiteboard: [PDT+])

I was experimenting with attaching image files to New Mail, the one that was 7K
came up Ok, the other ones (8K, 9K, 13K) came empty. There was a bug that was
fixed (and i haven't had a problem today) # 14612 : apprunner crashes when
attaching html files bigger then 8K.
**** observed with 1999-10-19-09-M11 Win build****
Assignee: phil → mscott
Reassign to mscott, cc jefft. Sounds like something you guys were just working
on.
Status: NEW → ASSIGNED
Target Milestone: M11
marina, was this for imap or pop? I've fixed a couple problems related to this

last week but it sounds like you are seeing it this week. with this morning's

build. hmm.
Yes, forgot to mention, both IMAP and POP are having this problem.
Summary: All attached image files that surpasses 8k in size can not be viewd after received → [DOGFOOD] All attached image files that surpasses 8k in size can not be viewd after received
Can you try again today? I made some changes to fix another bug that may effect
this problem.

Also, I still haven't been able to reproduce this problem. I have messages with
3 or 4 embedded images in them and I'm able to see them in the message pane.
Although it does seem to take a while. I'm still trying to reproduce this.

This is certainly a dogfood bug. marking as such.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
In trying to view some more images over and over again, I found that every now
and then one of them would fail to load. I tracked this down to a fence post
condition in nsMsgLineStreamBuffer::ReadNextLine tha caused the imap protocol to
block if we had 1 byte free in the stream buffer and 1 byte left in the stream
from the incoming server. A rare case but one that did cause a hang.

I'm going to go ahead and mark this as fixed. Marina, can you run through some
of the image files that were causing you problems with 10/21 or later builds?
Thanks!
Yes, i'll do it with 10/21 build because the today's one is very bad anyway and
i'm still running on the same problem.
While was looking at this bug discovered one more thing:
even when image is less then 8K( 7K in my case) and is coming attached just fine
after you click reply it disppears from the body.
I noticed this fact to. I just filed Bug #16927 to track the fact that the
image isn't showing up in the message body when you reply to a message.
QA Contact: lchiang → pmock
changing QA assigned to myself
Status: RESOLVED → REOPENED
I'm having the same problem again with 1999-11-10 Win build, i'm not able to
neither attach an image  file nor insert it. When inserting it gives me an error
message :" the number you entered (o) is outside of allowed range.Please enter
the number between 1 and 10000". I'm reopening
Resolution: FIXED → ---
cleaning resolution
Whiteboard: [PDT+]
Putting on PDT+ radar.
Assignee: mscott → jefft
Status: REOPENED → NEW
Target Milestone: M11 → M12
M12 fix apparently not imminent.
Status: NEW → ASSIGNED
marina, were you trying to insert image into the editor? If it is then that's
editor's problem not mail/news problem. Using Attach button from the mail
compose window is fine. You might be confused with attching image attachments vs
inserting images into html editor. Regarding images surpasses 8k, I believe we
do have the corruption problem which is addressed in bug 10232.
I reopened this bug based on those testing results:
1)attaching an image (open new mail|click attach|choose image file from the
local);
2) i have several gif files: one is 9k and the other one is 4k;
3)viewing the 4k attachment is no problem;
4)viweing the 9k attachment gives me "inbox?number=3744607&part=1" instead of
image itself;
The insertion operation (Insert an image into the mail body by going
(Insert|Image) might belong to Editor but is problamatic also (in the same way i
described the attachment problem)
Assignee: jefft → warren
Status: ASSIGNED → NEW
Warren has fixed the problem. Reassign to warren to mark it fixed.
Status: NEW → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
Fix checked in.
Blocks: 18951
Status: RESOLVED → VERIFIED
No longer blocks: 18951
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.