Bug #16814 --> i found a problem which may be causing us to block in the imap protocol when downloading larger attachments or images. Basically, the nsMsgLineStreamBuffer class had a fence post bug when determining if it had enough room to read in more bytes. If the # of free bytes in the stream buffer was 1 byte and we had just one byte of data left to read in from the incoming stream, we would fail to read in that one byte. r=sspitzer